[tool.poetry]
name = "pycounts-rchen34"
version = "0.1.1"
description = "Calculate word counts in a text file!"
authors = ["Roy Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"

[[tool.poetry.packages]]
include = "pycounts"
from = "src"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
